# viam-rssi-triangulation

./: .gitignore  README.md  build.sh  meta.json  pyproject.toml  requirements.txt  run.sh  setup.sh  test_scan_rssi.py
data/: floor_plan_points.json  unifi_bssids_viam-5g.csv  unifi_bssids_viam.csv
examples/: fingerprints.sqlite  module_config_viam-5g.json  module_config_viam-6g.json
rssi_triangulation/: __init__.py  aggregate.py  aps.py  calibrate.py  fingerprint.py  fingerprint_commands.py  fusion.py  geo.py  linux_scan.py  locate.py  module_config.py  registry.py  scanner.py  triangulate.py
scripts/: run_tests.sh
src/: main.py
src/models/: rssi_position_sensor.py
tests/: conftest.py  test_aggregate.py  test_algo_regressions.py  test_aps.py  test_calibrate.py  test_fingerprint.py  test_fusion.py  test_geo.py  test_linux_scan.py  test_locate.py  test_module_config.py  test_scanner.py  test_triangulate.py
web/floorplan/: index.html
