[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rssi-triangulation"
version = "0.1.0"
description = "WiFi RSSI floor position triangulation for Viam (any AP vendor)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
viam = ["viam-sdk>=0.40.0"]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rssi_triangulation*"]
